--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <title>Bus Live Tracking | lefteris.dev</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- HERE maps services -->
