--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Bus Live Tracking | lefteris.dev</title>
+    <title>Bus Live Tracking | lefteris-gr.dev</title>
     <base href="/" />
     <meta
       name="viewport"
